--- a/categorias/Categoria_2/categoria2.css
+++ b/categorias/Categoria_2/categoria2.css
@@ -27,8 +27,9 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 2rem;
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background-color: #264653;
+    
+
 }
 
 .nav-list{
@@ -40,7 +41,7 @@ header{
 
 .nav-list li a{
     text-decoration: none;
-    color: #1c1c1c;
+    color: #f9f5f5;
     font-weight: bold;
     font-size: 1.2rem;
 }
@@ -51,12 +52,50 @@ header{
 
 }
 
-.container{
-    background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
-    border: 2px solid yellow;
-    height: 40rem;
-    z-index: 10;
+.caja-container{
+    background-color: #E9C46A;
 }
+
+.caja-container.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+
+.container{
+
+    height: 26.2rem;
+    display: flex;
+    align-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #E9C46A;
+}
+
+.container img{
+    max-width: 5rem;
+    margin: .80rem 0.5rem;
+    padding-left: 0.5rem;
+    box-shadow: 3px 3px 3px #1f1f21;
+    align-items: center; 
+    
+}
+.container.a-p{
+    display: flex;
+    font-weight: bold;
+    font-size: 0.81rem;
+    
+}
+
+.a-comprar, .a-p{
+    color: #0b0b0b;
+    font-size: 0.9rem;
+}
+
 
 @keyframes polygon-in-opposing-corners {
     from {
@@ -87,12 +126,13 @@ header{
         display: flex;
         flex-direction: column;
         align-items: end;
-        gap: 0.5rem;
+        gap: 1rem;
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
-        background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+        background-color: #2A9D8F;
+
         padding: 2rem;
         box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
         opacity: 1;
@@ -109,6 +149,118 @@ header{
         align-items: end;
     }
     .nav-list li a {
-        color: azure;
+        color: rgb(14, 13, 13);
     }
+}
+
+/*Viewport 780px*/
+
+@media screen and (min-width: 780px){
+.abrir-menu,
+.cerrar-menu{
+display: block;
+border: 2rem;
+font-size: 1.4rem;
+background-color: transparent;
+}
+
+.img-logo{
+    max-width: 8rem;
+    border-radius: 200px;
+    border: 0.3rem solid rgb(240, 16, 16);
+}
+
+
+
+.container img{
+    max-width: 9rem;
+    
+    box-shadow: 5px 5px 5px #1f1f21;
+    align-items: center; 
+    margin: 0 auto;
+}
+
+.nav.visible{
+    opacity: 1;
+    visibility: hidden;
+}
+
+
+.nav-list li a {
+    gap: 12rem;
+    color: rgb(248, 247, 247);
+}
+
+.abrir-menu, .cerrar-menu{
+    display: none;
+}
+
+.container.a-p{
+    display: flex;
+    font-weight: bold;
+    
+}
+
+.a-comprar, .a-p{
+    color: #0b0b0b;
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+    gap: 10px;
+}
+
+}
+
+/* Viewport 1300px*/
+
+@media screen and (min-width: 1300px){
+.abrir-menu,
+.cerrar-menu{
+display: block;
+border: 2rem;
+font-size: 1.4rem;
+background-color: transparent;
+}
+
+.img-logo{
+    max-width: 12rem;
+    border-radius: 200px;
+    border: 0.3rem solid rgb(240, 16, 16);
+}
+
+
+.container img{
+    max-width: 10rem;
+    margin: 1.1rem 0.5rem;
+    padding-left: 0.5rem;
+    box-shadow: 5px 5px 5px #1f1f21;
+    align-items: center; 
+    
+}
+
+.nav.visible{
+    opacity: 1;
+    visibility: hidden;
+}
+
+
+.nav-list li a {
+    font-size: 1.5rem;
+    gap: 16rem;
+    color: rgb(250, 247, 247);
+}
+
+.abrir-menu, .cerrar-menu{
+    display: none;
+}
+
+.container.a-p{
+    display: flex;
+    font-weight: bold;
+    font-size: 8rem;
+}
+
+.a-comprar, .a-p{
+    color: #0b0b0b;
+    font-size: 1.3rem;
+}    
 }
