--- a/categorias/Categoria_1/categoria1.css
+++ b/categorias/Categoria_1/categoria1.css
@@ -269,3 +269,10 @@ background-color: transparent;
     font-size: 1.3rem;
 }    
 }
+
+form{
+    display:flex;
+    flex-direction:column;
+    gap:0.5em;
+    max-width: 300px;
+}
