--- a/style-producto.css
+++ b/style-producto.css
@@ -49,7 +49,7 @@ header{
 .caja-container{
     background-color: #E9C46A;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
 
 .caja-container.container{
