--- a/style-producto.css
+++ b/style-producto.css
@@ -82,6 +82,7 @@ header{
     max-width: 7.2rem;
     margin: .80rem 0.5rem;
     padding-left: 0.5rem;
+    border-radius: 30px;
     box-shadow: 2.5px 2.5px 2.5px 2.5px #1f1f21;
 
     
@@ -95,8 +96,9 @@ header{
 
 .a-comprar, .a-p{
     color: #0b0b0b;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     text-align: center;
+    font-weight: bold;
 }
 
 
