--- a/style-producto.css
+++ b/style-producto.css
@@ -11,7 +11,7 @@ img{
 }
 
 .img-logo{
-    max-width: 6.5rem;
+    max-width: 7rem;
     border-radius: 200px;
     border: 0.3rem solid rgb(240, 16, 16);
 }
@@ -115,8 +115,9 @@ header{
     animation: 2.5s cubic-bezier(.25, 1, .30, 1) polygon-in-opposing-corners both;
 }
 
+/******Viewport 500px**********/
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 500px){
     .abrir-menu,
     .cerrar-menu{
     display: block;
@@ -158,9 +159,9 @@ header{
     }
 }
 
-/*Viewport 500px*/
+/*Viewport 600px*/
 
-@media screen and (min-width: 500px){
+@media screen and (min-width: 600px){
 .abrir-menu,
 .cerrar-menu{
 display: block;
@@ -169,15 +170,15 @@ font-size: 1.2rem;
 background-color: transparent;
 }
 
+
 .img-logo{
-    max-width: 5rem;
+    max-width: 7.2rem;
     border-radius: 200px;
     border: 0.3rem solid rgb(240, 16, 16);
 }
 
 .container{
-    height: 16rem;
-    
+    height: 20rem;
     margin-left: 80px;
     display: flex;
     align-content: space-between;
@@ -186,12 +187,16 @@ background-color: transparent;
     justify-content: space-evenly;
     align-items: center;
     background-color: #E9C46A;
+
 }
 
+
 .container img{
-    max-width: 4rem;
-    
-    box-shadow: 5px 5px 5px 5px #1f1f21;
+    max-width: 10rem;
+    margin: 1rem 0.8rem;
+    padding-left: 0.5rem;
+    border-radius: none;
+    box-shadow: 4.2px 4.2px 4.2px 4.2px #1f1f21;
     align-items: center; 
     margin: 0 auto;
 }
@@ -226,9 +231,9 @@ background-color: transparent;
 
 }
 
-/* Viewport 1300px*/
+/* Viewport 850px*/
 
-@media screen and (min-width: 1300px){
+@media screen and (min-width: 850px){
 .abrir-menu,
 .cerrar-menu{
 display: block;
