--- a/style-producto.css
+++ b/style-producto.css
@@ -117,7 +117,7 @@ header{
 
 /******Viewport 500px**********/
 
-@media screen and (max-width: 500px){
+@media screen and (min-width: 500px){
     .abrir-menu,
     .cerrar-menu{
     display: block;
@@ -167,7 +167,7 @@ header{
 
 
 
-/* Viewport 650px*/
+/* Viewport 650px
 
 @media screen and (min-width: 650px){
 .abrir-menu,
