--- a/style-producto.css
+++ b/style-producto.css
@@ -85,8 +85,8 @@ header{
     border-radius: 30px;
     box-shadow: 2.5px 2.5px 2.5px 2.5px #1f1f21;
 
-    
 }
+
 .container.a-p{
     display: flex;
     font-weight: bold;
@@ -115,7 +115,7 @@ header{
     animation: 2.5s cubic-bezier(.25, 1, .30, 1) polygon-in-opposing-corners both;
 }
 
-/******Viewport 500px**********/
+/******Viewport  máximo 500px**********/
 
 @media screen and (max-width: 500px){
     .abrir-menu,
@@ -127,220 +127,124 @@ header{
     }
 
     .nav{
-        opacity: 0;
-        visibility: hidden;
-        display: flex;
-        flex-direction: column;
-        align-items: end;
-        gap: 1rem;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #2A9D8F;
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #2A9D8F;
+    padding: 1rem;
+    box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
+    opacity: 1;
 
-        padding: 1rem;
-        box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
-        opacity: 1;
+    }
+    .container{
+
+    height: 30rem;
+    display: flex;
+    flex-direction: column;
+    background-color: #E9C46A;
+    align-items: center;
+    }
+
+    .nav.visible{
+    opacity: 1;
+    visibility: visible;
+    }
+
+    .nav-list{
+    flex-direction: column;
+    align-items: end;
+    }
+    .nav-list li a {
+    color: rgb(14, 13, 13);
+    }
+
+    
+}
+
+/****************************************/
+
+@media screen and(max-width: 600px){
+    .abrir-menu,
+    .cerrar-menu{
+    display: block;
+    border: 2rem;
+    font-size: 1.4rem;
+    background-color: transparent;
+    }
+    
+    .caja-container{
+    display: block;
+    align-items: center;
+    background-color: #E9C46A;
+    }
+
+    .container{
+    
+    height: 35rem;
+    display: block;
+    background-color: #E9C46A;
+        
+    }
+
+
+    .nav{
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #2A9D8F;
+    padding: 1rem;
+    box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
+    opacity: 1;
 
     }
 
     .nav.visible{
-        opacity: 1;
-        visibility: visible;
+    opacity: 1;
+    visibility: visible;
     }
 
     .nav-list{
-        flex-direction: column;
-        align-items: end;
+    flex-direction: column;
+    align-items: end;
     }
     .nav-list li a {
-        color: rgb(14, 13, 13);
+    color: rgb(14, 13, 13);
     }
 
     .img-logo{
-        max-width: 7.5rem;
-        border-radius: 200px;
-        border: 0.3rem solid rgb(240, 16, 16);
+    max-width: 8.2rem;
+    border-radius: 200px;
+    border: 0.3rem solid rgb(240, 16, 16);
     }
-}
 
-/*Viewport 780px*/
-
-@media screen and (min-width: 780px){
-.abrir-menu,
-.cerrar-menu{
-display: block;
-border: 2rem;
-font-size: 1.4rem;
-background-color: transparent;
-}
-
-.img-logo{
-    max-width: 8rem;
-    border-radius: 200px;
-    border: 0.3rem solid rgb(240, 16, 16);
-}
-
-
-
-.container img{
+    .container img{
     max-width: 9rem;
-    
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    margin: 0 auto;
-}
-
-.nav.visible{
-    opacity: 1;
-    visibility: hidden;
-}
-
-
-.nav-list li a {
-    gap: 12rem;
-    color: rgb(248, 247, 247);
-}
-
-.abrir-menu, .cerrar-menu{
-    display: none;
-}
-
-.container.a-p{
-    display: flex;
-    font-weight: bold;
-    
-}
-
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    gap: 10px;
-}
-
-}
-
-/* Viewport 1300px*/
-
-@media screen and (min-width: 1300px){
-.abrir-menu,
-.cerrar-menu{
-display: block;
-border: 2rem;
-font-size: 1.4rem;
-background-color: transparent;
-}
-
-.img-logo{
-    max-width: 12rem;
-    border-radius: 200px;
-    border: 0.3rem solid rgb(240, 16, 16);
-}
-
-
-.container img{
-    max-width: 10rem;
-    margin: 1.1rem 0.5rem;
+    margin: .80rem 0.5rem;
     padding-left: 0.5rem;
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
+    border-radius: none;
+    box-shadow: 3.5px 3.5px 3.5px 3.5px #1f1f21;
     
-}
+    }
 
-.nav.visible{
-    opacity: 1;
-    visibility: hidden;
-}
-
-
-.nav-list li a {
-    font-size: 1.5rem;
-    gap: 16rem;
-    color: rgb(250, 247, 247);
-}
-
-.abrir-menu, .cerrar-menu{
-    display: none;
-}
-
-.container.a-p{
-    display: flex;
-    font-weight: bold;
-    font-size: 8rem;
-}
-
-.a-comprar, .a-p{
+    .a-comprar, .a-p{
     color: #0b0b0b;
-    font-size: 1.3rem;
-}    
-}
-
-
-/* Viewport 650px
-
-@media screen and (min-width: 650px){
-.abrir-menu,
-.cerrar-menu{
-display: block;
-border: 2rem;
-font-size: 1.4rem;
-background-color: transparent;
-}
-
-.img-logo{
-    max-width: 12rem;
-    border-radius: 200px;
-    border: 0.3rem solid rgb(240, 16, 16);
-}
-
-.container{
-    height: 16rem;
-    width:max-content;
-    margin-left: 80px;
-    display: flex;
-    align-content: space-between;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #E9C46A;
-}
-
-.container img{
-    max-width: 7.5rem;
-    margin: 1.1rem 0.5rem;
-    padding-left: 0.5rem;
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    
-}
-
-.nav.visible{
-    opacity: 1;
-    visibility: hidden;
-}
-
-
-.nav-list li a {
-    font-size: 2rem;
-    gap: 16rem;
-    color: rgb(250, 247, 247);
-}
-
-.abrir-menu, .cerrar-menu{
-    display: none;
-}
-
-.container.a-p{
-    display: flex;
+    font-size: 1.2rem;
+    text-align: center;
     font-weight: bold;
-    font-size: 8rem;
-}
+    }
 
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 1.3rem;
-}    
 }
