--- a/style.css
+++ b/style.css
@@ -52,9 +52,7 @@ header{
 
 }
 
-.caja-container{
-    background-color: #E9C46A;
-}
+
 
 .caja-container.container{
     display: flex;
@@ -67,34 +65,35 @@ header{
 .container{
 
     height: 26.2rem;
-    display: flex;
-    align-content: space-between;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #E9C46A;
-}
-
-.container img{
-    max-width: 5rem;
-    margin: .80rem 0.5rem;
-    padding-left: 0.5rem;
-    box-shadow: 3px 3px 3px #1f1f21;
-    align-items: center; 
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    background-color: #FFFFFF;
+    background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+    
     
 }
-.container.a-p{
-    display: flex;
+
+.motos{
+    margin-top: 2rem;
+    margin-left: 4rem;
+    max-width: 18rem;
+    animation-name: mover ;
+    animation-duration: 1.5s ;
+}
+
+.floor{
+    background-color: rgb(7, 7, 6);
+}
+
+h6{
+    color: rgb(248, 245, 245);
+    font-size: 1.5rem;
     font-weight: bold;
-    font-size: 0.81rem;
+    text-align: center;
     
 }
 
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 0.9rem;
-}
+
 
 
 @keyframes polygon-in-opposing-corners {
@@ -106,10 +105,35 @@ header{
     }
 }
 
-[transition-style="in:polygon:opposing-corners"] {
-    animation: 2.5s cubic-bezier(.25, 1, .30, 1) polygon-in-opposing-corners both;
+@keyframes wipe-in-left {
+    from {
+    clip-path: inset(0 0 0 100%);
+    }
+    to {
+    clip-path: inset(0 0 0 0);
+    }
+}
+[transition-style="in:wipe:left"] {
+    animation: 6s cubic-bezier(4, 1, .30, 1) wipe-in-left both;
 }
 
+@keyframes mover{
+    0%{
+        transform: translate(0);
+    }
+
+    50%{
+        transform: translate(125%, 15%);
+    }
+
+    75%{
+        transform: translate(-600%);
+    }
+
+    100%{
+        transform: translate(0);
+    }
+}
 
 @media screen and (max-width: 550px){
     .abrir-menu,
@@ -133,7 +157,7 @@ header{
         bottom: 0;
         background-color: #2A9D8F;
 
-        padding: 2rem;
+        padding: .5rem;
         box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
         opacity: 1;
 
@@ -172,13 +196,6 @@ header{
 
 
 
-.container img{
-    max-width: 9rem;
-    
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    margin: 0 auto;
-}
 
 .nav.visible{
     opacity: 1;
@@ -195,18 +212,6 @@ header{
     display: none;
 }
 
-.container.a-p{
-    display: flex;
-    font-weight: bold;
-    
-}
-
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    gap: 10px;
-}
 
 }
 
@@ -228,14 +233,7 @@ background-color: transparent;
 }
 
 
-.container img{
-    max-width: 10rem;
-    margin: 1.1rem 0.5rem;
-    padding-left: 0.5rem;
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    
-}
+
 
 .nav.visible{
     opacity: 1;
@@ -253,14 +251,4 @@ background-color: transparent;
     display: none;
 }
 
-.container.a-p{
-    display: flex;
-    font-weight: bold;
-    font-size: 8rem;
-}
-
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 1.3rem;
-}    
 }
