--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header{
     text-decoration: none;
     color: #f9f5f5;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .abrir-menu,
@@ -65,7 +65,7 @@ header{
 
 .container{
 
-    height: 30rem;
+    height: 40rem;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     background-color: #FFFFFF;
@@ -164,7 +164,7 @@ h6{
     .cerrar-menu{
     display: block;
     border: 2rem;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     background-color: transparent;
     }
 
@@ -181,7 +181,7 @@ h6{
         bottom: 0;
         background-color: #2A9D8F;
 
-        padding: .5rem;
+        padding: 0.5rem;
         box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
         opacity: 1;
 
