--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ header{
 
     height: 40rem;
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(4, max-width(auto));
     background-color: #FFFFFF;
     background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
-    gap: 2px;
+    gap: 1px;
 
     
 }
@@ -95,11 +95,21 @@ header{
 }
 
 .banner-2{
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     margin-bottom: 2rem;
-    margin-left: 5rem;
+    margin-left: 7rem;
     animation-name: mover ;
     animation-duration: 3.5s; 
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-3{
+    font-size: 2rem;
+    margin-left: 0.2rem;
+    animation-name: mover ;
+    animation-duration: 4s; 
     color: #09203f;
     text-align: center;
     font-weight: bold;
