--- a/style.css
+++ b/style.css
@@ -209,6 +209,71 @@ h6{
     .nav-list li a {
         color: rgb(14, 13, 13);
     }
+
+    .container{
+
+        height: 40rem;
+        display: grid;
+        grid-template-rows: repeat(4, max-width(auto));
+        background-color: #FFFFFF;
+        background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+        gap: 1px;
+    
+        
+    }
+    
+    .motos{
+        max-width: 22rem;
+        margin-top: 1rem;
+        margin-left: 2rem;
+        animation-name: mover ;
+        animation-duration: 1.5s ;
+    }
+    
+    .banner{
+        font-size: 1.6rem;
+        margin-top: 2rem;
+        margin-left: 0.4rem;
+        animation-name: mover ;
+        animation-duration: 2.5s;
+        color: #09203f;
+        text-align: left;
+        font-weight: bold;
+    }
+    
+    .banner-2{
+        font-size: 1.6rem;
+        margin-bottom: 2rem;
+        margin-left: 7rem;
+        animation-name: mover ;
+        animation-duration: 3.5s; 
+        color: #09203f;
+        text-align: left;
+        font-weight: bold;
+    }
+    
+    .banner-3{
+        font-size: 2rem;
+        margin-left: 0.2rem;
+        animation-name: mover ;
+        animation-duration: 4s; 
+        color: #09203f;
+        text-align: center;
+        font-weight: bold;
+    }
+    
+    .floor{
+        background-color: rgb(7, 7, 6);
+    }
+    
+    h6{
+        color: rgb(248, 245, 245);
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-align: center;
+        
+    }
+    
 }
 
 /*Viewport 700px*/
@@ -246,12 +311,75 @@ h6{
     display: none;
 }
 
+.container{
+
+    height: 40rem;
+    display: grid;
+    grid-template-rows: repeat(4, max-width(auto));
+    background-color: #FFFFFF;
+    background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+    gap: 1px;
+
+    
+}
+
+.motos{
+    max-width: 30rem;
+    margin-top: 1rem;
+    margin-left: 10rem;
+    animation-name: mover ;
+    animation-duration: 1.5s ;
+}
+
+.banner{
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-left: 0.4rem;
+    animation-name: mover ;
+    animation-duration: 2.5s;
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-2{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    margin-left: 20rem;
+    animation-name: mover ;
+    animation-duration: 3.5s; 
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-3{
+    font-size: 2.7rem;
+    margin-left: 0.2rem;
+    animation-name: mover ;
+    animation-duration: 4s; 
+    color: #09203f;
+    text-align: center;
+    font-weight: bold;
+}
+
+.floor{
+    background-color: rgb(7, 7, 6);
+}
+
+h6{
+    color: rgb(248, 245, 245);
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    
+}
 
 }
 
 /* Viewport 1300px*/
 
-@media screen and (min-width: 1300px){
+@media screen and (min-width: 1200px){
 .abrir-menu,
 .cerrar-menu{
 display: block;
@@ -265,8 +393,6 @@ background-color: transparent;
     border-radius: 200px;
     border: 0.3rem solid rgb(240, 16, 16);
 }
-
-
 
 
 .nav.visible{
@@ -283,6 +409,70 @@ background-color: transparent;
 
 .abrir-menu, .cerrar-menu{
     display: none;
+}
+
+.container{
+
+    height: 45rem;
+    display: grid;
+    grid-template-rows: repeat(4, max-width(auto));
+    background-color: #FFFFFF;
+    background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+    gap: 1px;
+
+    
+}
+
+.motos{
+    max-width: 35rem;
+    margin-top: 1rem;
+    margin-left: 38rem;
+    animation-name: mover ;
+    animation-duration: 1.5s ;
+}
+
+.banner{
+    font-size: 4rem;
+    margin-top: 2rem;
+    margin-left: 0.4rem;
+    animation-name: mover ;
+    animation-duration: 2.5s;
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-2{
+    font-size: 4rem;
+    margin-bottom: 2rem;
+    margin-left: 60rem;
+    animation-name: mover ;
+    animation-duration: 3.5s; 
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-3{
+    font-size: 5rem;
+    margin-left: 0.2rem;
+    animation-name: mover ;
+    animation-duration: 4s; 
+    color: #09203f;
+    text-align: center;
+    font-weight: bold;
+}
+
+.floor{
+    background-color: rgb(7, 7, 6);
+}
+
+h6{
+    color: rgb(248, 245, 245);
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    
 }
 
 }
