--- a/categorias/Categoria_1/categoria1.css
+++ b/categorias/Categoria_1/categoria1.css
@@ -78,15 +78,15 @@ form{
 
 label {
     color: #0b0b0b;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 input, select{
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 button{
-    font-size: 1.2rem
+    font-size: 1rem
 }
 
 
@@ -209,7 +209,7 @@ background-color: transparent;
 
 
 .nav-list li a {
-    gap: 12rem;
+    gap: 15rem;
     color: rgb(248, 247, 247);
 }
 
@@ -236,21 +236,26 @@ form{
     flex-direction: column;
     gap: 20px;
     margin-bottom: 180px;
-    max-width: 300px;
-    font-size: 1.5rem;
+    max-width: 400px;
+    font-size: 1.6rem;
 }
 
 label {
     color: #0b0b0b;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
-input, select{
-    font-size: 1.5rem;
+select{
+    max-width: 40rem;
+    font-size: 1.6rem;
+}
+
+input{
+    font-size: 1.6rem;
 }
 
 button{
-    font-size: 1.5rem
+    font-size: 1.6rem
 }
 
 }
@@ -281,7 +286,7 @@ background-color: transparent;
 
 .nav-list li a {
     font-size: 1.5rem;
-    gap: 16rem;
+    gap: 18rem;
     color: rgb(250, 247, 247);
 }
 
@@ -306,9 +311,9 @@ background-color: transparent;
 form{
     display: flex;
     flex-direction: column;
-    gap: 25px;
-    margin-bottom: 240px;
-    max-width: 300px;
+    gap: 35px;
+    margin-bottom: 50px;
+    max-width: 650px;
     font-size: 1.6rem;
 }
 
