--- a/categorias/Categoria_5/categoria5.css
+++ b/categorias/Categoria_5/categoria5.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Heebo', sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
 body{
