--- a/categorias/Categoria_6/categoria6.css
+++ b/categorias/Categoria_6/categoria6.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Heebo', sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
 body{
@@ -52,21 +53,10 @@ header{
 
 }
 
-.caja-container{
-    background-color: #E9C46A;
-}
-
-.caja-container.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-
-}
 
 .container{
 
-    height: 26.2rem;
+    height: 45rem;
     display: flex;
     align-content: space-between;
     flex-wrap: nowrap;
@@ -76,24 +66,27 @@ header{
     background-color: #E9C46A;
 }
 
-.container img{
-    max-width: 5rem;
-    margin: .80rem 0.5rem;
-    padding-left: 0.5rem;
-    box-shadow: 3px 3px 3px #1f1f21;
-    align-items: center; 
-    
-}
-.container.a-p{
+
+form{
     display: flex;
-    font-weight: bold;
-    font-size: 0.81rem;
-    
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 256px;
+    max-width: 300px;
+    font-size: 1.2rem;
 }
 
-.a-comprar, .a-p{
+label {
     color: #0b0b0b;
-    font-size: 0.9rem;
+    font-size: 1rem;
+}
+
+input, select{
+    font-size: 1rem;
+}
+
+button{
+    font-size: 1rem
 }
 
 
@@ -116,7 +109,7 @@ header{
     .cerrar-menu{
     display: block;
     border: 2rem;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     background-color: transparent;
     }
 
@@ -151,6 +144,42 @@ header{
     .nav-list li a {
         color: rgb(14, 13, 13);
     }
+
+    
+.container{
+
+    height: 45rem;
+    display: flex;
+    align-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #E9C46A;
+}
+
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 256px;
+    max-width: 300px;
+    font-size: 1.2rem;
+}
+
+label {
+    color: #0b0b0b;
+    font-size: 1.2rem;
+}
+
+input, select{
+    font-size: 1.2rem;
+}
+
+button{
+    font-size: 1.2rem
+}
 }
 
 /*Viewport 780px*/
@@ -160,7 +189,7 @@ header{
 .cerrar-menu{
 display: block;
 border: 2rem;
-font-size: 1.4rem;
+font-size: 1.8rem;
 background-color: transparent;
 }
 
@@ -172,13 +201,6 @@ background-color: transparent;
 
 
 
-.container img{
-    max-width: 9rem;
-    
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    margin: 0 auto;
-}
 
 .nav.visible{
     opacity: 1;
@@ -187,7 +209,7 @@ background-color: transparent;
 
 
 .nav-list li a {
-    gap: 12rem;
+    gap: 15rem;
     color: rgb(248, 247, 247);
 }
 
@@ -195,17 +217,45 @@ background-color: transparent;
     display: none;
 }
 
-.container.a-p{
+.container{
+
+    height: 45rem;
     display: flex;
-    font-weight: bold;
-    
+    align-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #E9C46A;
 }
 
-.a-comprar, .a-p{
+
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 180px;
+    max-width: 400px;
+    font-size: 1.6rem;
+}
+
+label {
     color: #0b0b0b;
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    gap: 10px;
+    font-size: 1.6rem;
+}
+
+select{
+    max-width: 40rem;
+    font-size: 1.6rem;
+}
+
+input{
+    font-size: 1.6rem;
+}
+
+button{
+    font-size: 1.6rem
 }
 
 }
@@ -228,15 +278,6 @@ background-color: transparent;
 }
 
 
-.container img{
-    max-width: 10rem;
-    margin: 1.1rem 0.5rem;
-    padding-left: 0.5rem;
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    
-}
-
 .nav.visible{
     opacity: 1;
     visibility: hidden;
@@ -245,7 +286,7 @@ background-color: transparent;
 
 .nav-list li a {
     font-size: 1.5rem;
-    gap: 16rem;
+    gap: 18rem;
     color: rgb(250, 247, 247);
 }
 
@@ -253,14 +294,40 @@ background-color: transparent;
     display: none;
 }
 
-.container.a-p{
+.container{
+
+    height: 45rem;
     display: flex;
-    font-weight: bold;
-    font-size: 8rem;
+    align-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #E9C46A;
 }
 
-.a-comprar, .a-p{
+
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    margin-bottom: 50px;
+    max-width: 650px;
+    font-size: 1.6rem;
+}
+
+label {
     color: #0b0b0b;
-    font-size: 1.3rem;
-}    
+    font-size: 1.8rem;
+}
+
+input, select{
+    font-size: 1.8rem;
+}
+
+button{
+    font-size: 1.8rem
+}
+
 }
