--- a/style.css
+++ b/style.css
@@ -283,9 +283,9 @@ header{
     
 }
 
-/*Viewport 700px*/
+/*Viewport 768px*/
 
-@media screen and (min-width: 700px){
+@media screen and (width >= 768px){
 .abrir-menu,
 .cerrar-menu{
     display: block;
@@ -309,11 +309,6 @@ header{
 }
 
 
-.nav-list li a {
-    gap: 12rem;
-    color: rgb(248, 247, 247);
-}
-
 .abrir-menu, .cerrar-menu{
     display: none;
 }
@@ -323,11 +318,12 @@ header{
     color: #f9f5f5;
     font-weight: bold;
     font-size: 1.5rem;
+    gap: 12rem;
 }
 
 .container{
 
-    height: 45rem;
+    height: 49rem;
     display: grid;
     grid-template-rows: repeat(4, max-width(auto));
     background-color: #FFFFFF;
@@ -391,9 +387,9 @@ header{
 
 }
 
-/* Viewport 1200px*/
+/* Viewport 1280px*/
 
-@media screen and (min-width: 1200px){
+@media screen and (width >= 1280px){
 .abrir-menu,
 .cerrar-menu{
 display: block;
@@ -435,7 +431,7 @@ background-color: transparent;
 
 .container{
 
-    height: 45rem;
+    height: 32rem;
     display: grid;
     grid-template-rows: repeat(4, max-width(auto));
     background-color: #FFFFFF;
@@ -446,18 +442,18 @@ background-color: transparent;
 }
 
 .motos{
-    max-width: 35rem;
-    margin-top: 1rem;
-    margin-left: 38rem;
+    max-width: 30rem;
+    margin-top: -1.1999999999999993rem;
+    margin-left: 28rem;
     animation-name: mover ;
     animation-duration: 1.5s ;
 }
 
 .banner{
-    font-size: 4rem;
-    margin-top: 2rem;
-    margin-left: 0.4rem;
-    animation-name: mover ;
+    font-size: 2.3rem;
+    margin-top: -1rem;
+    margin-left: 5.4rem;
+    animation-name: mover;
     animation-duration: 2.5s;
     color: #09203f;
     text-align: left;
@@ -465,9 +461,10 @@ background-color: transparent;
 }
 
 .banner-2{
-    font-size: 4rem;
-    margin-bottom: 2rem;
-    margin-left: 60rem;
+    font-size: 2.3rem;
+    margin-bottom: 15rem;
+    margin-left: 45.5rem;
+    margin-top: 1rem;
     animation-name: mover ;
     animation-duration: 3.5s; 
     color: #09203f;
@@ -476,13 +473,14 @@ background-color: transparent;
 }
 
 .banner-3{
-    font-size: 5rem;
-    margin-left: 0.2rem;
-    animation-name: mover ;
-    animation-duration: 4s; 
+    font-size: 3rem;
+    margin-left: 0rem;
+    animation-name: mover;
+    animation-duration: 4s;
     color: #09203f;
     text-align: center;
     font-weight: bold;
+    margin-top: -14rem;
 }
 
 .floor{
