--- a/style-producto.css
+++ b/style-producto.css
@@ -177,9 +177,9 @@ header {
 
 }
 
-/******Viewport 700px***************/
+/******Viewport 820px***************/
 
-@media screen and (min-width: 700px) {
+@media screen and (width >= 820px) {
     .abrir-menu
     .cerrar-menu {
         display: block;
@@ -217,6 +217,96 @@ header {
         border: 0.3rem solid rgb(240, 16, 16);
     }
     
+
+    .container {
+        height: 25rem;
+        display: flex;
+        flex-direction: row;
+        background-color: #E9C46A;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        grid-column-gap: 30rem;
+        row-gap: 3rem;
+    }
+
+    .container img {
+        display: grid;
+
+        row-gap: -20rem;
+        max-width: 9rem;
+        margin: 1.2rem 0.5rem;
+        padding-left: 0.5rem;
+        border-radius: none;
+        box-shadow: 3.5px 3.5px 3.5px 3.5px #1f1f21;
+        
+
+    }
+
+
+ 
+
+    .container.a-p {
+        display: flex;
+        font-weight: bold;
+        font-size: 1rem;
+        margin-top: -50px;
+    }
+
+    .a-comprar,
+    .a-p {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        gap: -10px;
+        color: #0b0b0b;
+        font-size: 1.2rem;
+        text-align: center;
+        font-weight: bold;
+        margin-bottom: -20px;
+    }
+
+}
+
+/*******Viewport 1280px*****************/
+@media screen and (width >= 1280px) {
+    .abrir-menu
+    .cerrar-menu {
+        display: block;
+        border: 2rem;
+        font-size: 1.8rem;
+        background-color: transparent;
+    }
+
+
+    .caja-container {
+        display: flex;
+
+    }
+
+
+    .nav.visible {
+        opacity: 1;
+        visibility: hidden;
+    }
+
+    .nav-list li a {
+        font-size: 1.9rem;
+        gap: 10rem;
+        color: rgb(248, 247, 247);
+        
+    }
+
+    .abrir-menu, .cerrar-menu{
+        display: none;
+    }
+
+    .img-logo {
+        max-width: 10rem;
+        border-radius: 200px;
+        border: 0.3rem solid rgb(240, 16, 16);
+    }
+    
     .container img {
         max-width: 12rem;
         margin: .80rem 0.5rem;
@@ -228,7 +318,7 @@ header {
 
 
     .container {
-        height: 25rem;
+        height: 35rem;
         display: flex;
         flex-direction: row;
         background-color: #E9C46A;
@@ -250,7 +340,7 @@ header {
     .a-comprar,
     .a-p {
         color: #0b0b0b;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         text-align: center;
         font-weight: bold;
         margin-bottom: -20px;
