--- a/quiensomos.css
+++ b/quiensomos.css
@@ -94,7 +94,7 @@ header{
 
 .lema{
     color: black;
-    margin-top: -4rem;
+    margin-top: -6rem;
 
     font-size: 1rem;
     text-align: center;
@@ -213,7 +213,7 @@ header{
     }
 }
 
-/*Viewport 780px*/
+/*Viewport 820px*/
 
 @media screen and (width >= 820px){
 .abrir-menu,
@@ -284,11 +284,31 @@ background-color: transparent;
 
 .lema{
     color: black;
-    margin-top: -11rem;
-    font-size: 1.5rem;
+    margin-top: -6rem;
+
+    font-size: 1rem;
     text-align: center;
+    animation-name: mover-text;
+    animation-duration: 3s;
 }
 
+.lema2{
+    color: black;
+    margin-top: -11rem;
+    font-size: 1rem;
+    text-align: center;
+    animation-name: mover-text;
+    animation-duration: 3.5s;
+}
+
+.lema3{
+    color: black;
+    margin-top: -15rem;
+    font-size: 1rem;
+    text-align: center;
+    animation-name: mover-text;
+    animation-duration: 4s;
+}
 
 
 }
